Fixed most of problems given by intellij.